Change flex basis to the triple content block to make sure they stretch equally
ready #650

--- a/source/frontend/src/block/TripleContent/TripleContent.scss
+++ b/source/frontend/src/block/TripleContent/TripleContent.scss
@@ -12,7 +12,8 @@
 	}
 
 	.triple-content-item {
-		flex-grow: 1;
+		flex-basis: 0;
+	  	flex-grow: 1;
 		padding: $sizeGrid;
 
 		.heading {
